[package]
name = "d2doverlay-sys"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "d2doverlay_sys"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }

[build-dependencies]
cc = "1"

[dependencies]
winapi = "0.3.8"
